tests/semantic/valid/35_e_obj_attr_assign_ok.hulk
class Point(x:Number) {
    x:Number = x;
}
let p = new Point(0.0) in {
    p.x := 5.0;
    print(p.x);
};
