tests/semantic/invalid/47_e_as_undefined_type.hulk
type Point(x:Number) {
    x:Number = x;
}
let p = new Point(1.0) in {
    let x = p as UnknownType in print(0);
};
